implement basic button

--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,6 @@
 <template>
-  <h1>${message}</h1>
-  <fluent-tile></fluent-tile>
+	<h1>${message}</h1>
+	<fluent-tile></fluent-tile>
+	<fluent-button>Hello</fluent-button>
+	<fluent-button>Button</fluent-button>
 </template>
