--- a/src/app.html
+++ b/src/app.html
@@ -1,22 +1,5 @@
 <template>
-	<fluent-tile-group class="au-animate au-stagger">
-		<fluent-tile class="small" icon="fal fa-cogs"></fluent-tile>
-		<fluent-live-tile>
-			<fluent-tile icon="fal fa-cogs"></fluent-tile>
-			<fluent-tile icon="fal fa-plane"></fluent-tile>
-		</fluent-live-tile>
-		<fluent-live-tile animation="slide">
-			<fluent-tile>
-				<div class="heading">Sliding Tile</div>
-				<div class="body">This tile can slide! You can fit extra stuff.</div>
-				<div class="body">This tile can slide! You can fit extra stuff.</div>
-				<div class="body">This tile can slide! You can fit extra stuff.</div>
-				<div class="body">This tile can slide! You can fit extra stuff.</div>
-			</fluent-tile>
-		</fluent-live-tile>
-		<fluent-tile class="wide" display-name="world" icon="fal fa-camera"><div class="body">Hello</div></fluent-tile>
-		<fluent-tile class="small" icon="fal fa-cogs"></fluent-tile>
-		<fluent-tile class="small" icon="fal fa-cogs"></fluent-tile>
-		<fluent-tile class="small" icon="fal fa-cogs"></fluent-tile>
-	</fluent-tile-group>
+	<require from="./styles/theme.less"></require>
+
+	<router-view></router-view>
 </template>
