discord tile and applet popup

--- a/src/fluent/elements/tile-group/fluent-tile-group.html
+++ b/src/fluent/elements/tile-group/fluent-tile-group.html
@@ -1,7 +1,7 @@
 <template>
 	<require from="./fluent-tile-group.less"></require>
 
-	<section class="display-name" if.bind="displayName" innerhtml.bind="displayName"></section>
+	<section class="display-name title" if.bind="displayName" innerhtml.bind="displayName"></section>
 
 	<section class="tiles">
 		<slot></slot>
