--- a/src/fluent/elements/tile/fluent-tile.html
+++ b/src/fluent/elements/tile/fluent-tile.html
@@ -6,5 +6,5 @@
 	<slot name="image"></slot>
 
 	<section class="hint"><slot></slot></section>
-	<section class="display-name" if.bind="displayName" innerhtml.bind="displayName"></section>
+	<section class="display-name body" if.bind="displayName" innerhtml.bind="displayName"></section>
 </template>
