--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <template>
 	<require from="./styles/theme.less"></require>
-
+	<fluent-applet-host></fluent-applet-host>
 	<router-view></router-view>
 </template>
