--- a/src/fluent/elements/tile-group/fluent-tile-group.html
+++ b/src/fluent/elements/tile-group/fluent-tile-group.html
@@ -3,7 +3,7 @@
 
 	<section class="display-name title" if.bind="displayName" innerhtml.bind="displayName"></section>
 
-	<section class="tiles">
+	<section class="tiles au-stagger">
 		<slot></slot>
 	</section>
 </template>
