--- a/src/fluent/elements/tile/fluent-tile.html
+++ b/src/fluent/elements/tile/fluent-tile.html
@@ -5,6 +5,9 @@
 
 	<slot name="image"></slot>
 
-	<section class="hint"><slot></slot></section>
+	<section class="hint">
+		<slot></slot>
+	</section>
+
 	<section class="display-name body" if.bind="displayName" innerhtml.bind="displayName"></section>
 </template>
