use router to show applets instead of dialogs, fix validation

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,4 @@
 <template>
 	<require from="./styles/theme.less"></require>
-	<fluent-applet-host></fluent-applet-host>
-	<router-view></router-view>
+	<router-view swap-order="with"></router-view>
 </template>
