re-style contact page

--- a/src/fluent/elements/applet/fluent-applet.html
+++ b/src/fluent/elements/applet/fluent-applet.html
@@ -1,4 +1,6 @@
 <template>
+	<require from='./fluent-applet.less'></require>
+
 	<div class="titleBar">
 		<span>${displayName}</span>
 		<button click.delegate="close()">&#10005;</button>
